examples/src/static/styles.css
/* ... */
/* } */

/* @media only screen and (max-width: 600px) { */
#controlPanel.mobile {
    bottom: 48px;
    left: 8px;
    width: calc(100% - 16px);
    top: inherit;
    background-color: rgba(54, 67, 70, 1);
    min-height: calc(100% - 116px);
}

#controlPanel.mobile:has(#controlPanel-controls):not(.pcui-collapsed){
    min-height: 300px;
}

#controlPanel.mobile.pcui-collapsed {
    min-height: 0;
}

#controlPanel.mobile > .pcui-panel-content {
    min-height: 100%;
}
#controlPanel.mobile > .pcui-panel-content > section {
    border-radius: 6px;
    position: absolute !important;
}
/* } */

#controlPanel.mobile .pcui-label-group .pcui-label {
    font-size: 14px;
}

#controlPanel.mobile .pcui-slider .pcui-numeric-input {
    min-width: 47px;
}

#controlPanel > .pcui-panel-content > .pcui-panel:first-child {
    border-top: 1px solid #20292B;
}

#controlPanel .pcui-label-group > .pcui-label {
    font-size: 14px;
    max-width: 35%;
}

#controlPanel .pcui-label-group > .pcui-slider > .pcui-numeric-input {
    min-width: 46px;
}

#controlPanel > .pcui-panel-content {
    background-color: #364346;
}

#descriptionPanel {
    /* center on the bottom of the page */
    position: absolute;
    left: 50%;
    bottom: 8px;
    transform: translateX(-50%);
    color: #f2f2f2;
    width: 50%;
    text-align: center;
}

#descriptionPanel.mobile {
    bottom: 100px;
    width: 90%;
}

#descriptionPanel a {
    color: #f2f2f2;
}

@media only screen and (max-width: 600px) {
    #controls-wrapper {
        position: absolute;
        width: 100%;
        height: calc(100% - 48px);
    }

    #controlPanel-controls {
        height: calc(100% - 48px);
        overflow: auto;
    }

    .code-editor-mobile {
        height: calc(100% - 48px);
    }
}

#deviceTypeSelectInput {
    margin: 8px;
    min-width: 200px;
}

#deviceTypeSelectInput > .pcui-select-input-container-value > .pcui-select-input-value {
    height: 32px;
    border-radius: 4px;
    display: flex;
    text-align: center;
    align-items: center;
}

#deviceTypeSelectInput > .pcui-select-input-container-value > .pcui-select-input-icon {
    top: 4px;
}

#errorLabel {
    color: #f95555 !important;
    font-size: 14px;
    text-align: center;
    display: block;
}

.filter-container {
    position: relative !important;
    margin: 8px 8px 0px 8px !important;
    width: calc(100% - 16px);
}

.filter-container .filter-input {
    margin: 0 !important;
    width: 100%;
}

.filter-clear {
    position: absolute;
    right: 8px;
    top: 50%;
    transform: translateY(-50%);
    cursor: pointer;
    color: #888;
    font-size: 12px;
    line-height: 1;
    z-index: 1;
    user-select: none;
}

.filter-clear:hover {
    color: #fff;
}

.has-filter-text .pcui-input-element[placeholder]::after {
    display: none;
}

::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}
::-webkit-scrollbar-track {
    background: #20292b;
}
::-webkit-scrollbar-thumb {
    background: #5b7073;
}

.panel-toggle {
    width: 32px;
    height: 32px;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 1000;
    padding: 0;
    cursor: pointer;
}

.panel-toggle::before {
    font-family: 'pc-icon';
    content: '\E183';
    font-weight: 200;
    font-size: 14px;
    margin-right: 10px;
    text-align: center;
    color: #f60;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translateY(-50%) translateX(-50%);
}

.panel-toggle:hover::before {
    color: white;
}

#sideBar.collapsed > .panel-toggle::before, #codePane.collapsed .panel-toggle::before {
    transform: translateY(-50%) translateX(-50%) rotateZ(90deg);
}

#sideBar.collapsed, #codePane.collapsed {
    width: 32px !important;
    min-width: 32px;
}

#sideBar.collapsed #sideBar-contents, #sideBar.collapsed .pcui-panel-content, #codePane.collapsed section {
    display: none !important;
}

#codePane.collapsed .pcui-panel-header {
    background-color: inherit;
    position: absolute;
    transform: rotate(90deg);
    margin-top: 18px;
    padding-top: 24px;
}

#codePane.collapsed .tabs-container, #codePane.collapsed .code-editor-menu-container {
    display: none;
}


#sideBar.collapsed .pcui-panel-header {
    background-color: inherit;
    position: absolute;
    transform: rotate(90deg);
    margin-top: 52px;
    margin-left: -21px;
    padding-top: 20px;
    width: 83px;
    height: 15px !important;
}

#codePane.collapsed .pcui-panel-header {
    left: 5px;
}

#codePane.pcui-resizable-resizing ~ #canvas-container {
    pointer-events: none;
}

#codePane-panel-toggle {
    margin-top: -32px;
}

#codePane.collapsed #codePane-panel-toggle {
    margin-top: 0px;
} 

#menu {
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 16px;
    left: 8px;
    padding: 8px;
    background-color: rgba(54, 67, 70, 0.64);
    border-radius: 6px;
    z-index: 99999;
    transition: opacity 500ms;
    opacity: 1;
}

#menu img {
    width: 32px;
    height: 32px;
    border-radius: 4px;
    overflow: hidden;
}

#menu .pcui-button {
    width: 32px;
    height: 32px;
    margin: 0 0 0 8px;
    position: relative;
}

#menu .pcui-button[data-icon]:before {
    position: absolute;
    left: 5px;
    top: 2px;
    font-size: 20px;
}

#menu #playcanvas-icon {
    cursor: pointer;
}

#menu #language-button {
    font-weight: 900;
    width: 36px;
}

@media only screen and (max-width: 600px) {
    #menu #play-button {
        display: none;
    }
    #menu #language-button {
        display: none;
    }
}

@media only screen and (max-width: 600px) {
    #menu {
        top: 8px;
        background-color: rgba(54, 67, 70, 1);
    }

    #menu img {
        min-width: 32px;
    }
}

#menu-buttons {
    display: flex;
}

#menu #menu-embed-container {
    display: flex;
    flex-direction: column;
}

#menu #menu-embed-container .pcui-label {
    font-size: 12px;
    margin-top: 8px;
    word-wrap: break-word;
    white-space: normal;
}
/* ... */

